--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "jspdf": "^2.5.1",
+    "node-fetch": "^3.3.2",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-pdf": "^7.7.1",
     "react-router-dom": "^6.22.3",
     "sass": "^1.72.0"
