--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "html2canvas": "^1.4.1",
+    "jsbarcode": "^3.11.6",
     "jspdf": "^2.5.1",
     "node-fetch": "^3.3.2",
     "node-sass": "^9.0.0",
